cmake: install onlinetasks plugin in kmymoney plugin directory

The mentioned plugin was created in a different directory which
resulted in manual actions being required to get unit tests that
use plugins to run. The problem has been fixed with this commit.

BUG:497361
FIXED-IN:5.2